// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Source maps console.log() should pass reporting correct line number using template "default" 1`] = `
jest exit code: 0
  ===[ STDOUT ]===================================================================
  console.log echo.spec.ts:5
      WITHIN TEST
  
    console.log echo.ts:2
      WITHIN SOURCE
  ===[ STDERR ]===================================================================
  PASS ./echo.spec.ts
    echo
      √ echoes
  
  Test Suites: 1 passed, 1 total
  Tests:       1 passed, 1 total
  Snapshots:   0 total
  Time:        XXs
  Ran all test suites.
  ================================================================================
`;

exports[`Source maps console.log() should pass reporting correct line number using template "with-babel-6" 1`] = `
jest exit code: 0
  ===[ STDOUT ]===================================================================
  console.log echo.spec.ts:5
      WITHIN TEST
  
    console.log echo.ts:2
      WITHIN SOURCE
  ===[ STDERR ]===================================================================
  PASS ./echo.spec.ts
    echo
      √ echoes
  
  Test Suites: 1 passed, 1 total
  Tests:       1 passed, 1 total
  Snapshots:   0 total
  Time:        XXs
  Ran all test suites.
  ================================================================================
`;

exports[`Source maps console.log() should pass reporting correct line number using template "with-babel-7" 1`] = `
jest exit code: 0
  ===[ STDOUT ]===================================================================
  console.log echo.spec.ts:5
      WITHIN TEST
  
    console.log echo.ts:2
      WITHIN SOURCE
  ===[ STDERR ]===================================================================
  PASS ./echo.spec.ts
    echo
      √ echoes
  
  Test Suites: 1 passed, 1 total
  Tests:       1 passed, 1 total
  Snapshots:   0 total
  Time:        XXs
  Ran all test suites.
  ================================================================================
`;

exports[`Source maps console.log() should pass reporting correct line number using template "with-jest-22" 1`] = `
jest exit code: 0
  ===[ STDOUT ]===================================================================
  console.log echo.spec.ts:5
      WITHIN TEST
  
    console.log echo.ts:2
      WITHIN SOURCE
  ===[ STDERR ]===================================================================
  PASS ./echo.spec.ts
    echo
      √ echoes
  
  Test Suites: 1 passed, 1 total
  Tests:       1 passed, 1 total
  Snapshots:   0 total
  Time:        XXs
  Ran all test suites.
  ================================================================================
`;

exports[`Source maps throw new Error() should fail reporting correct line number using template "default" 1`] = `
jest exit code: 1
  ===[ STDOUT ]===================================================================
  console.log echo.spec.ts:5
      WITHIN TEST
  
    console.log echo.ts:2
      WITHIN SOURCE
  ===[ STDERR ]===================================================================
  FAIL ./echo.spec.ts
    echo
      × echoes
  
    ● echo › echoes
  
      WITHIN SOURCE
  
        2 |   console.log('WITHIN SOURCE');
        3 |   if (process.env.__FORCE_FAIL) {
      > 4 |     throw new Error('WITHIN SOURCE');
          |           ^
        5 |   }
        6 |   return shout;
        7 | }
  
        at Object.echo (echo.ts:4:11)
        at Object.<anonymous> (echo.spec.ts:6:12)
  
  Test Suites: 1 failed, 1 total
  Tests:       1 failed, 1 total
  Snapshots:   0 total
  Time:        XXs
  Ran all test suites.
  ================================================================================
`;

exports[`Source maps throw new Error() should fail reporting correct line number using template "with-babel-6" 1`] = `
jest exit code: 1
  ===[ STDOUT ]===================================================================
  console.log echo.spec.ts:5
      WITHIN TEST
  
    console.log echo.ts:2
      WITHIN SOURCE
  ===[ STDERR ]===================================================================
  FAIL ./echo.spec.ts
    echo
      × echoes
  
    ● echo › echoes
  
      WITHIN SOURCE
  
        2 |   console.log('WITHIN SOURCE');
        3 |   if (process.env.__FORCE_FAIL) {
      > 4 |     throw new Error('WITHIN SOURCE');
          |           ^
        5 |   }
        6 |   return shout;
        7 | }
  
        at Object.echo (echo.ts:4:11)
        at Object.<anonymous> (echo.spec.ts:6:12)
  
  Test Suites: 1 failed, 1 total
  Tests:       1 failed, 1 total
  Snapshots:   0 total
  Time:        XXs
  Ran all test suites.
  ================================================================================
`;

exports[`Source maps throw new Error() should fail reporting correct line number using template "with-babel-7" 1`] = `
jest exit code: 1
  ===[ STDOUT ]===================================================================
  console.log echo.spec.ts:5
      WITHIN TEST
  
    console.log echo.ts:2
      WITHIN SOURCE
  ===[ STDERR ]===================================================================
  FAIL ./echo.spec.ts
    echo
      × echoes
  
    ● echo › echoes
  
      WITHIN SOURCE
  
        2 |   console.log('WITHIN SOURCE');
        3 |   if (process.env.__FORCE_FAIL) {
      > 4 |     throw new Error('WITHIN SOURCE');
          |           ^
        5 |   }
        6 |   return shout;
        7 | }
  
        at Object.echo (echo.ts:4:11)
        at Object.<anonymous> (echo.spec.ts:6:12)
  
  Test Suites: 1 failed, 1 total
  Tests:       1 failed, 1 total
  Snapshots:   0 total
  Time:        XXs
  Ran all test suites.
  ================================================================================
`;

exports[`Source maps throw new Error() should fail reporting correct line number using template "with-jest-22" 1`] = `
jest exit code: 1
  ===[ STDOUT ]===================================================================
  console.log echo.spec.ts:5
      WITHIN TEST
  
    console.log echo.ts:2
      WITHIN SOURCE
  ===[ STDERR ]===================================================================
  FAIL ./echo.spec.ts
    echo
      × echoes
  
    ● echo › echoes
  
      WITHIN SOURCE
  
        2 |   console.log('WITHIN SOURCE');
        3 |   if (process.env.__FORCE_FAIL) {
      > 4 |     throw new Error('WITHIN SOURCE');
        5 |   }
        6 |   return shout;
        7 | }
        
        at Object.echo (echo.ts:4:11)
        at Object.<anonymous> (echo.spec.ts:6:12)
  
  Test Suites: 1 failed, 1 total
  Tests:       1 failed, 1 total
  Snapshots:   0 total
  Time:        XXs
  Ran all test suites.
  ================================================================================
`;
